--- a/html/index.html
+++ b/html/index.html
@@ -4,10 +4,10 @@
         <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     </head>
     <script type ="text/javascript" src="/js/ContactManager.js"></script>
+    <script type ="text/javascript" src="/js/TestIO.js"></script>
     <body>
         <p>Test here</p>
-        <button type ="button" onclick="document.write(findContact())">Try this</button>
         <button type="button" onclick="document.write('derp')">test</button>
-        <button type="button" onclick="document.write(5 + 6)">Try it</button>
+        <button type="button" onclick="document.write(testingInputOutput())">Try it</button>
     </body>
 </html>
