Fixing some bugs. Now it's outputting correctly for OperatingSystem.js

--- a/html/index.html
+++ b/html/index.html
@@ -4,10 +4,11 @@
         <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     </head>
     <script type ="text/javascript" src="/js/ContactManager.js"></script>
+    <script type ="text/javascript" src="/js/OperatingSystem.js"></script>
     <script type ="text/javascript" src="/js/TestIO.js"></script>
     <body>
         <p>Test here</p>
         <button type="button" onclick="document.write('derp')">test</button>
-        <button type="button" onclick="document.write(testingInputOutput())">Try it</button>
+        <button type="button" onclick="testingInputOutput()">Try it</button>
     </body>
 </html>
