Adding boiler plate to IODeviceDriver.js

--- a/html/index.html
+++ b/html/index.html
@@ -3,7 +3,7 @@
         <title>Team Swag Operating Systems</title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     </head>
-    <script type ="text/javascript" src="/js/ContactManager.js"></script>
+    <script type ="text/javascript" src="/js/IODeviceDriver.js"></script>
     <script type ="text/javascript" src="/js/OperatingSystem.js"></script>
     <script type ="text/javascript" src="/js/TestIO.js"></script>
     <body>
