Added the processes that were in HTML files to JS files

--- a/html/index.html
+++ b/html/index.html
@@ -5,10 +5,12 @@
     </head>
     <script type ="text/javascript" src="/js/IODeviceDriver.js"></script>
     <script type ="text/javascript" src="/js/OperatingSystem.js"></script>
-    <script type ="text/javascript" src="/js/TestIO.js"></script>
+    <script type ="text/javascript" src="/js/main.js"></script>
+    <script type ="text/javascript" src="/js/BankProcess.js"></script>
     <body>
         <p>Test here</p>
-        <button type="button" onclick="document.write('derp')">test</button>
-        <button type="button" onclick="testingInputOutput()">Try it</button>
+        <button type="button" onclick="testingInputOutput()">Start</button>
+        <button type="button" onclick="stopInputOutput()">End</button>
+        <button type="button" onclick="bankProcess()">Start</button>
     </body>
 </html>
