Added in updating the HTML whenever change of states or file IO is occuring

--- a/js/index.html
+++ b/js/index.html
@@ -5,8 +5,9 @@
     </head>
     <script type ="text/javascript" src="/js/OperatingSystem.js"></script>
     <body>
-        <p>Test here</p>
+        <p>Made by David Chau, Tony Tran, Benson/Hao Xian Zheng, Andrew Goff, Tiffany Ku and Hin Vong</p>
         <button type="button" onclick="testingInputOutput()">Start</button>
         <button type="button" onclick="stopInputOutput()">End</button>
+        <div id ="output"></div>
     </body>
 </html>
