--- a/js/index.html
+++ b/js/index.html
@@ -3,7 +3,7 @@
         <title>Team Swag Operating Systems</title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     </head>
-    <script type ="text/javascript" src="/js/OperatingSystem.js"></script>
+    <script src="OperatingSystem.js"></script>
     <body>
         <p>Made by David Chau, Tony Tran, Benson/Hao Xian Zheng, Andrew Goff, Tiffany Ku and Hin Vong</p>
         <button type="button" onclick="testingInputOutput()">Start</button>
