Trying to get processes to work. However, device.postMessage doesn't seem to be working

--- a/js/cli/index.html
+++ b/js/cli/index.html
@@ -35,6 +35,8 @@
             <div id ="filepath">C:\TeamSwag></div><div id="input">Help</div>
             <input id="inputbox" type="text" name="inputbox" autofocus>
         </footer>
+        <script src="/js/OperatingSystem.js"></script>
+        <script src="/js/IODeviceDriver.js"></script>
         <script src="runCMD.js"></script>
         <script src="displayjs.js"></script>
     </div>
