--- a/js/index.html
+++ b/js/index.html
@@ -3,11 +3,18 @@
         <title>Team Swag Operating Systems</title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     </head>
-    <script src="OperatingSystem.js"></script>
-    <body>
-        <p>Made by David Chau, Tony Tran, Benson/Hao Xian Zheng, Andrew Goff, Tiffany Ku and Hin Vong</p>
-        <button type="button" onclick="testingInputOutput()">Start</button>
-        <button type="button" onclick="stopInputOutput()">End</button>
-        <div id ="output"></div>
-    </body>
+    <div>
+        <body>
+            <div id="Output">Made by David Chau, Tony Tran, Benson/Hao Xian Zheng, Andrew Goff, Tiffany Ku and Hin Vong<br></div>
+            <button type="button" onclick="testingInputOutput()">Start</button>
+            <button type="button" onclick="stopInputOutput()">End</button>
+        </body>
+        <footer>
+            <br>
+            <div id ="filepath">C:\TeamSwag></div><div id="input">Help</div>
+            <input id="inputbox" type="text" name="inputbox" autofocus>
+        </footer>
+        <script src="cli/displayjs.js"></script>
+        <script src="OperatingSystem.js"></script>
+    </div>
 </html>
