Had to have index.html in same path as OperatingSystem and/or Worker files

--- a/js/cli/index.html
+++ b/js/cli/index.html
@@ -1,43 +1,22 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>JS:OS</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <style>
-            #inputbox {
-                display:inline-block;
-                border:white;
-                background-color:white;
-                color:white;
-                width: 8px;
-                outline:none;
-            }
-            body {
-                background-color:black;
-                color:white;
-            }
-            footer {
-                background-color:black;
-                color:white;
-            }
-            div {
-                display:inline-block;
-            }
-        </style>
+        <title>Team Swag Operating Systems</title>
+        <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     </head>
     <div>
         <body>
-            <div id="Output">Welcome! Hit enter to see the commands!<br></div>
+            <div id="Output">Made by David Chau, Tony Tran, Benson/Hao Xian Zheng, Andrew Goff, Tiffany Ku and Hin Vong<br></div>
+            <button type="button" onclick="testingInputOutput()">Start</button>
+            <button type="button" onclick="stopInputOutput()">End</button>
         </body>
         <footer>
             <br>
             <div id ="filepath">C:\TeamSwag></div><div id="input">Help</div>
             <input id="inputbox" type="text" name="inputbox" autofocus>
         </footer>
-        <script src="/js/OperatingSystem.js"></script>
-        <script src="/js/IODeviceDriver.js"></script>
-        <script src="runCMD.js"></script>
+        <script src="/js/Directory.js"></script>
         <script src="displayjs.js"></script>
+        <script src="/js/OperatingSystem.js"></script>
     </div>
 </html>
