All processes can be called by cli

--- a/js/index.html
+++ b/js/index.html
@@ -34,7 +34,7 @@
             <div id ="filepath">C:\TeamSwag></div><div id="input">Help</div>
             <input id="inputbox" type="text" name="inputbox" autofocus>
         </footer>
-        <script src="Directory.js"></script>
+        <script src="IODeviceDriver.js"></script>
         <script src="cli/runCMD.js"></script>
         <script src="cli/displayjs.js"></script>
         <script src="OperatingSystem.js"></script>
