--- a/js/index.html
+++ b/js/index.html
@@ -27,7 +27,9 @@
     </head>
     <div>
         <body>
-            <div id="Output">Welcome! Type man and hit enter to see the commands!<br></div>
+            <div id="Output">Welcome! This is [INSERT NAME HERE].OS. It was created by David Chau, Hao Xian Zheng(Benson)
+                            Andrew Goff, Tony Tran and Hin Vong. We hope you have fun exploring our OS just as much
+                            as we had fun making it. Type man and hit enter to see the commands!<br></div>
         </body>
         <footer>
             <br>
