Added help cmd, bug fixed cat cmd, made CLI case insensitive

--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
     </head>
     <div>
         <body>
-            <div id="Output">Welcome! Hit enter to see the commands!<br></div>
+            <div id="Output">Welcome! Enter Help to see commands!<br></div>
         </body>
         <footer>
             <br>
-            <div id ="filepath">C:\TeamSwag></div><div id="input">Help</div>
+            <div id ="filepath">C:\TeamSwag></div><div id="input"></div>
             <input id="inputbox" type="text" name="inputbox" autofocus>
         </footer>
         <script src="IODeviceDriver.js"></script>
