--- a/index.html
+++ b/index.html
@@ -38,5 +38,7 @@
         <script src="cli/runCMD.js"></script>
         <script src="cli/displayjs.js"></script>
         <script src="OperatingSystem.js"></script>
+        <script src ="jsPipe.js"></script>
+        <script src =""
     </div>
 </html>
