--- a/index.html
+++ b/index.html
@@ -39,6 +39,6 @@
         <script src="cli/displayjs.js"></script>
         <script src="OperatingSystem.js"></script>
         <script src ="jsPipe.js"></script>
-        <script src =""
+        <script src ="philosophers.js"></script>
     </div>
 </html>
