--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
             <div id ="filepath">C:\Interrobang></div><div id="input"></div>
             <input id="inputbox" type="text" name="inputbox" autofocus>
         </footer>
+        <script src="Threading/Semaphore.js"></script>
+        <script src="Threading/Mutex.js"></script>
         <script src="IODeviceDriver.js"></script>
         <script src="cli/runCMD.js"></script>
         <script src="cli/displayjs.js"></script>
