--- a/index.html
+++ b/index.html
@@ -33,15 +33,15 @@
         </body>
         <footer>
             <br>
-            <div id ="filepath">C:\Interrobang></div><div id="input"></div>
+            <div id ="filepath"></div><div id="input"></div>
             <input id="inputbox" type="text" name="inputbox" autofocus>
         </footer>
         <script src = "initd.js"></script>
         <script src="Threading/Semaphore.js"></script>
         <script src="Threading/Mutex.js"></script>
         <script src="IODeviceDriver.js"></script>
+        <script src="OperatingSystem.js"></script>
         <script src="cli/runCMD.js"></script>
         <script src="cli/displayjs.js"></script>
-        <script src="OperatingSystem.js"></script>
     </div>
 </html>
