need to somehow get the file with all password/username, but otherwise it's all done

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <div id ="filepath">C:\Interrobang></div><div id="input"></div>
             <input id="inputbox" type="text" name="inputbox" disabled />
             <input id = "namebox" type="text" name="namebox" autofocus />
-            <input id = "passwordbox" type="text" name="passwordbox" />
+            <input id = "passwordbox" type="password" name="passwordbox" />
             <button id = "submitUserPass">Submit</button>
         </footer>
         <script src = "initd.js"></script>
