Fixed bug that did not allow restarting web page

--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
             <br>
             <div id ="filepath"></div><div id="input"></div>
             <input id="inputbox" type="text" name="inputbox" disabled>
-            <input id = "namebox" type="text" name="namebox" autofocus />
-            <input id = "passwordbox" type="password" name="passwordbox" />
+            <input id = "namebox" type="text" name="namebox" placeholder="Username" autofocus />
+            <input id = "passwordbox" type="password" placeholder="Username" name="passwordbox" />
             <button id = "submitUserPass">Submit</button>
         </footer>
         <script src = "initd.js"></script>
