CD command now fully works with MKDIR. However, folders cannot have the same name.

--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
     </head>
     <div>
         <body>
-            <div id="Output">Please input your username and password to use Interrobang OS<br></div>
+            <div id="Output">Please input your username and password to use Interrobang OS<br><p><b>Default:</b><br> Username: SuperUser <br> Password: superuser</p></div>
         </body>
         <footer>
             <br>
             <div id ="filepath"></div><div id="input"></div>
             <input id="inputbox" type="text" name="inputbox" disabled>
             <input id = "namebox" type="text" name="namebox" placeholder="Username" autofocus />
-            <input id = "passwordbox" type="password" placeholder="Username" name="passwordbox" />
+            <input id = "passwordbox" type="password" placeholder="Password" name="passwordbox" />
             <button id = "submitUserPass">Submit</button>
         </footer>
         <script src = "initd.js"></script>
