--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>JS:OS</title>
+        <title>JS:OS?!</title>
         <meta content="width=device-width, initial-scale=1.0">
         <style>
             #inputbox {
